results/SVCOMP/conversational/log-StringValueOf09-2024_03_17_16_58_46.txt
public class StringValueOf09 {
    //@ requires arg != null;
    //@ requires arg.matches("[-+]?[0-9]*\\.?[0-9]+([eE][-+]?[0-9]+)?");
    //@ ensures \result <==> \result.equals("33.3333");
    public static boolean f(String arg) {
        double doubleValue = Double.parseDouble(arg); // no suffix, double is default
        String tmp = String.valueOf(doubleValue);
        return tmp.equals("33.3333");
    }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf09.java:4: error: boolean cannot be dereferenced
    //@ ensures \result <==> \result.equals("33.3333");
                                    ^
1 error

public class StringValueOf09 {
    //@ requires arg != null;
    //@ requires arg.matches("[-+]?[0-9]*\\.?[0-9]+([eE][-+]?[0-9]+)?");
    //@ ensures \result == true <==> String.valueOf(Double.parseDouble(arg)).equals("33.3333");
    public static boolean f(String arg) {
        double doubleValue = Double.parseDouble(arg); // no suffix, double is default
        String tmp = String.valueOf(doubleValue);
        return tmp.equals("33.3333");
    }
}

